--- a/pkg/application/file_templates/typescript/controller.tmpl
+++ b/pkg/application/file_templates/typescript/controller.tmpl
@@ -1,8 +1,8 @@
-import { createRouteHandler, RawRouteHandler } from "./controller_builder";
+import { controllerBuilder } from "stevie-utils";
 {{ range $method := .Methods }}
-const {{ $method.FunctionName }}: RawRouteHandler = async (res) => {
+const {{ $method.FunctionName }}: controllerBuilder.RawRouteHandler = async (res) => {
     return res.send({ ok: true, message: "Hello from {{ $method.FunctionName }}" });
 };
 
-export const {{ $method.HandlerName }} = createRouteHandler({{ .FunctionName }});
+export const {{ $method.HandlerName }} = controllerBuilder.createRouteHandler({{ .FunctionName }});
 {{ end }}
