--- a/pkg/application/file_templates/typescript/package_json.tmpl
+++ b/pkg/application/file_templates/typescript/package_json.tmpl
@@ -10,14 +10,18 @@
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.64",
+    "@types/body-parser": "^1.19.0",
     "@types/chai": "^4.2.11",
+    "@types/express": "^4.17.9",
     "@types/mocha": "^8.0.0",
+    "@types/morgan": "^1.9.2",
     "@types/node": "^10.0.0",
     "chai": "^4.2.0",
     "mocha": "^8.0.1",
     "typescript": "^4.1.2"
   },
   "dependencies": {
-    "aws-lambda": "^1.0.6"
+    "aws-lambda": "^1.0.6",
+    "stevie-utils": "file:./stevie-utils"
   }
 }
