--- a/pkg/application/file_templates/typescript/tsconfig_json.tmpl
+++ b/pkg/application/file_templates/typescript/tsconfig_json.tmpl
@@ -11,7 +11,8 @@
         "pretty": true,
         "noFallthroughCasesInSwitch": true,
         "noImplicitReturns": true,
-        "forceConsistentCasingInFileNames": true
+        "forceConsistentCasingInFileNames": true,
+        "esModuleInterop": true
     },
     "include": [
         "app/**/*"
