Add command to run locally

--- a/pkg/application/file_templates/typescript/controller.tmpl
+++ b/pkg/application/file_templates/typescript/controller.tmpl
@@ -1,6 +1,6 @@
 import { controllerBuilder } from "stevie-utils";
 {{ range $method := .Methods }}
-const {{ $method.FunctionName }}: controllerBuilder.RawRouteHandler = async (res) => {
+export const {{ $method.FunctionName }}: controllerBuilder.RawRouteHandler = async (res) => {
     return res.send({ ok: true, message: "Hello from {{ $method.FunctionName }}" });
 };
 
