Working implementation of multi language endpoints

--- a/pkg/application/file_templates/typescript/tsconfig_json.tmpl
+++ b/pkg/application/file_templates/typescript/tsconfig_json.tmpl
@@ -2,7 +2,7 @@
     "compilerOptions": {
         "strict": true,
         "outDir": "bin",
-        "rootDir": "./app",
+        "rootDir": "./",
         "target": "es2016",
         "module": "commonjs",
         "moduleResolution": "node",
@@ -15,6 +15,9 @@
         "esModuleInterop": true
     },
     "include": [
-        "app/**/*"
+        "get/**/*",
+        "post/**/*",
+        "put/**/*",
+        "delete/**/*"
     ]
 }
