--- a/pkg/application/file_templates/ui/action_store_index_file.tmpl
+++ b/pkg/application/file_templates/ui/action_store_index_file.tmpl
@@ -1,5 +1,5 @@
 {{ range .Items }}
-import * as {{ .ImportName }} from "./{{ .ImportName }}";
+import * as {{ .ImportName }} from "./{{ .ImportName }}.js";
 {{ end }}
 export {
 {{ range .Items }}
