--- a/pkg/application/file_templates/ui/index.tmpl
+++ b/pkg/application/file_templates/ui/index.tmpl
@@ -1,5 +1,5 @@
-import * as actions from "./actions/index";
-import * as constants from "./constants/index";
-import * as stores from "./stores/index";
+import * as actions from "./actions/index.js";
+import * as constants from "./constants/index.js";
+import * as stores from "./stores/index.js";
 
 export { actions, stores };
